---------------------------------------------------------------------------------------------------
Version: 0.6.9
Date: 2022-09-27
  Bugfix:
    - Thanks to CaitSith2: Actually look for the external disable-mod-setting within on_runtime_mod_setting_changed.
---------------------------------------------------------------------------------------------------
Version: 0.6.8
Date: 2022-09-24
  Changes:
    - Thanks to CaitSith2: mods via remote interface can now declare they wish to be disabled.
    - Thanks to CaitSith2: machines no longer instantly level up to the next tier the moment they hit max level of current tier.
    - Added support for Algae Farm from Angels Bioprocessing
  Bugfix:
    - Thanks to CaitSith2: fixed a bug with on_configuration_changed. (this event fires on updating any mods, or installing/removing any mods.)
---------------------------------------------------------------------------------------------------
Version: 0.6.7
Date: 2022-09-07
  Bugfix:
    - Thanks to CaitSith2: Fixed a crash when copy/pasting a leveled machine with modules in editor mode with instant blueprinting turned on.
---------------------------------------------------------------------------------------------------
Version: 0.6.6
Date: 2022-09-06
  Features:
    - Added support for Angel's Refining and Angel's Petrochemical Processing
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2022-09-05
  Changes:
    - Thanks to CaitSith2: Changelog now shows up properly in factorio.
    - Thanks to CaitSith2: Updated changelog for changes made in version 0.6.1 to 0.6.4
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2022-09-05
  Bugfix:
    - Thanks to CaitSith2: Fix possibility of referring to a nil value.
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2022-09-03